[project]
name = "feedbin-deduplication"
version = "0.1.0"
description = "Deduplicate unread entries from your Feedbin account"
readme = "README.md"
requires-python = ">=3.13"
classifiers = ["Private :: Do Not Upload"]
dependencies = ["httpx", "typing-extensions;python_version < '3.15'"]

[dependency-groups]
cloudflare = ["workers-py"]

[tool.ruff]
exclude = ["pyt"]
